2006-04-24 Benoit Grégoire  <bock@step.polymtl.ca>
	* Dependencies.php:  Small fix in case gettext isn't installed

2006-04-24 Benoit Grégoire  <bock@step.polymtl.ca>
	* AuthenticatorLDAP.php:  Merge patch from jguevara@unitec.edu.  Fixes #125

2006-04-24 Benoit Grégoire  <bock@step.polymtl.ca>
	* Major system locale handling overhaull.  Hopefully abstract out the UTF8 problems once and for all, 
	allowing everyone to define them the same way.  Fix a few bugs along the way.  
	Should also be a little faster.

2006-04-24 Benoit Grégoire  <bock@step.polymtl.ca>
	* Revert Rob's SYSTEM_PATH change.  Sorry about that.  The devs spent hours to finally get the PATH
	 stuff consistent and fixing the countless bugs that this process introduced. 
	 Maybe some links still need to use BASE_URL_PATH instead of BASE_SSL_PATH,
	(or vice-versa) but it was on purpose that SYSTEM_PATH was not made available to Smarty.  
	We already have 3 defines to be used for links and html refs, that's enough
	 BASE_SSL_PATH should be used to enter SSL mode (if available)
 	 BASE_NON_SSL_PATH should be used to break out of SSL mode of when we
 	 explicitely do not want someting to be referenced over http
 	 BASE_URL_PATH should be used in all other cases to avoid needless SSL warning
	
2006-04-17 Rob Janes <janes.rob@gmail.com>
	* javascript for validating and navigating forms.
	* help text (untranslated).
	* EVENT_LOGGING enabling/disabling flag.
	* use SYSTEM_PATH instead of BASE_URL_PATH and BASE_SSL_PATH where ever appropriate.
	* standardize Smarty variables for Network and User info by adding assignSmartyValues($smarty, $self) to Network and User.
	* change_password only allowed if logged in.
	* non-superadmin can only use change_password to change their own password.
	* superadmin can use change_password to change any user password by entering in their password for the old password.
	* page_header div defined and positioned in MainUI

2006-04-04 Benoit Grégoire  <bock@step.polymtl.ca>